src/components/_modals.scss
.modal {
	position: fixed;
	display: -webkit-box;
	display: -webkit-flex;
	display: -ms-flexbox;
	display: flex;
	align-items: center;
	justify-content: center;
	top: 0;
	right: 0;
	bottom: 0;
	left: 0;
	background: rgba(#000, 0.8);
	opacity: 0;
	visibility: hidden;
	word-wrap: break-word;
	z-index: 13;
	@include transition(opacity);

	// modal background
	&-bg {
		position: absolute;
		top: 0;
		right: 0;
		bottom: 0;
		left: 0;
	}

	.modal-body {
		position: relative;
		padding: 1.25rem;
		max-width: 712px;
		width: 512px;
		background: $white;
		border-radius: .25rem;
		border: 1px solid $muted-light;
		backface-visibility: hidden;
		@include transform(scale(0));
		@include transition(all, .3s);
		@include resp(md) {
			width: 90%;
		}
		@include resp(sm) {
			width: 90%;
		}

		&:hover .modal-close {
			opacity: 1;
		}
	}

	.modal-close {
		position: absolute;
		top: 1.2rem;
		right: 1.2rem;
		width: 1.2rem;
		height: 1.2rem;
		color: $dark-light;
		line-height: 1.2;
		font-size: 1.5rem;
		font-weight: 700;
		text-align: center;
		text-decoration: none;
		opacity: 0;
		cursor: pointer;
		@include transition;

		&:hover,
		&:active,
		&:focus {
			color: $dark;
		}
	}

	h4,
	.modal-title {
		margin-top: 0;
		padding-bottom: .6rem;
	}

	.modal-text {
		margin-bottom: 1rem;
		border-top: 1px solid $muted-light;
		border-bottom: 1px solid $muted-light;

		> .row {
			margin-bottom: 0;

			> .col {
				padding: 1rem 0;
			}
		}
	}
}

.modal-state {
	display: none;

	&:checked + .modal {
		opacity: 1;
		visibility: visible;

		.modal-body {
			@include transform(scale(1));
		}
	}
}

